2004-01-16  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, PkgVersion.pm: Consolidated common code for
	instantiating a package into a new Package->setup_package_object
	function. Moved Type inheiritance and %-expansion in Package there
	also. Evaluate SplitOff Package in SplitOff scope instead of
	parent scope. Added support for multiple language versions: 'Type:
	perl (5.6.1 5.8.1)' gives a clone of the .info that has
	each (single) Type.

2004-01-14  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Empirically determined that 79 chars is the
	maximum safe line length for DescDetail.
	* Package.pm: Dumb hack to keep emacs paren balancing happy (was
	interpretting # in a few lines before as comment symbol).

2004-01-13  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix for regex /$file/ not do what we want if
	$file is the literal filename when it contains regex
	metacharacters. (bugs #875876).

2004-01-12  Daniel Macks  <dmacks@netspace.org>

	* Base.pm: params_matching() now defaults to case-insensitive.

2004-01-11  Daniel Macks  <dmacks@netspace.org>

	* PkgConfig.pm: Improved get_source_items_count(). Improved
	construction of _source_items. Disabled construction of
	_source_items for now.

2004-01-11  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Removed antiquated prompt_selection(). Improved
	fink-code error checking by use of Carp::confess.

2004-01-10  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Added get_source_items_count() and
	sanity-checking for get_source_items_list().

2004-01-10  Daniel Macks  <dmacks@netpace.org>

	* Base.pm: Added params_matching, a method to return the names of
	all parameters that match a passed regex.
	* PkgVersion.pm: Added _source_items, a ref to a list of refs to
	uniformly-keyed hashes of all info pertaining to each source for a
	package. Added accessor method get_source_items_list() to return a
	(deep) copy of this list.

2004-01-09  Remi Mommsen  <remigius.mommsen@cern.ch>
